# rUNSWift-2014-release

./: .gitignore  CMakeLists.txt  LICENSE  README.markdown  bootstrap-addons.cmake  bootstrap-eigen.cmake  bootstrap.cmake  toolchain-1.14.cmake
image/etc/: inittab
image/etc/conf.d/: net
image/etc/init.d/: runswiftwireless
image/etc/naoqi/: autoload.ini
image/etc/wpa_supplicant/: wpa_supplicant.conf
image/home/nao/: .bashrc  .profile
image/home/nao/.ssh/: authorized_keys
image/home/nao/data/: .gitattributes  bot.nnmc.bz2  bot_9am_cloudy.nnmc.bz2  bot_night.nnmc.bz2  bot_tuesday_9.nnmc.bz2  controller.rl  field_c_blue_map.data  goals.map  map.data  runswift.cfg  starbuck.nnmc.bz2  top.nnmc.bz2  top_9am_cloudy.nnmc.bz2  top_night.nnmc.bz2  words.vocab
image/home/nao/data/behaviours/: .gitignore  Constants.py  Global.py  Log.py  Sensors.py  Task.py  actioncommand.py  behaviour.py  world.py
image/home/nao/data/behaviours/roles/: Default.py
image/home/nao/data/behaviours/skills/: HeadSkill.py  WalkToPoint.py
image/home/nao/data/behaviours/test/: MotionCalibrate.py  StandStraight.py  WalkAround.py  WalkInACircle.py  WalkKickDribble.py  WalkTest.py
image/home/nao/data/configs/: robot2.cfg
image/home/nao/naoqi/preferences/: autoload.ini
robot/: .gitignore  CMakeLists.txt  SimRobot.cpp  SimRobot.hpp  benchrunswift.cmake  libagent.cmake  main.cpp  robot.cmake  runswift.cmake  soccer.cpp  soccer.hpp  testreceiver.cmake  testrunswift.cmake
robot/bench/: BenchFovea.cpp
robot/perception/behaviour/: BehaviourAdapter.cpp  BehaviourHelpers.hpp  KinematicsCalibrationSkill.cpp  SafetySkill.cpp  SafetySkill.hpp
robot/perception/behaviour/python/: RegisterConverters.cpp  RobotModule.cpp
robot/perception/behaviour/python/wrappers/: RobotInfo_wrap.cpp  SensorValues_wrap.cpp  vector_wrap.cpp
robot/perception/kinematics/: Kinematics.hpp
robot/perception/localisation/: ICP.cpp  LocalisationAdapter.cpp  LocalisationConstantsProvider.cpp  SimpleGaussian.cpp  SimpleGaussian.hpp  VisionUpdateBundle.hpp
robot/perception/localisation/robotfilter/: RobotFilter.cpp  RobotFilter.hpp
robot/perception/localisation/robotfilter/types/: GroupedRobots.cpp  GroupedRobots.hpp  RobotFilterUpdate.hpp  RobotObservation.cpp  RobotObservation.hpp
robot/perception/vision/: BallDetection.hpp  CameraToRR.cpp  CameraToRR.hpp  FieldLineDetection.cpp  GoalDetection.cpp  GoalMatcher.cpp  NaoCamera.hpp  NullCamera.hpp  OldRobotDetection.cpp  OldRobotDetection.hpp  RobotRegion.hpp  SimCamera.hpp  SurfDetection.cpp  SurfDetection.hpp  VarianceCalculator.cpp  Vision.cpp  Vision.hpp  VisionAdapter.cpp  VisionDefs.hpp  VisionFrame.hpp  VisualOdometry.hpp
robot/perception/vision/robotdetection/: RobotDetection.cpp  RobotDetection.hpp
robot/perception/vision/robotdetection/analysis/sanitychecks/: ShoulderExclusionSanityCheck.cpp  ShoulderExclusionSanityCheck.hpp
robot/receiver/: Nao.cpp  Nao.hpp  Nao.tcc  RemoteControl.cpp  RemoteControl.hpp  Team.cpp  Team.hpp
robot/soundprocessing/: CMakeLists.txt  alsoundprocessing.cpp  alsoundprocessing.h  main.cpp  qiproject.xml  soundprocessing.rst
robot/soundprocessing/tests/: MySoundProcessingModuleTest.py
robot/tests/: TestBresenhamPtr.cpp  TestFovea.cpp  TestFoveaData.hpp  TestHistogram.cpp  TestIKinematics.cpp  TestProjections.cpp  TestRANSACTypes.cpp  TestRansac.cpp
robot/tests/perception/localisation/robotfilter/: TestRobotFilter.cpp
robot/tests/perception/localisation/robotfilter/types/: TestGroupedRobots.cpp  TestRobotObservation.cpp
utils/: CMakeLists.txt  bootstrap-qt.cmake  bootstrap-robotdir.cmake  doxygen.cfg  uncrustify.cfg
utils/behaviourUtils/: navigation.py  role_positioning.py
utils/cameraCalibrator/: Makefile  main.c
utils/competition_nnmcs/bhuman/: bot_kernel  top_kernel
utils/competition_nnmcs/upenn/: bot_kernel  options.cpp  top_kernel
utils/ftp/: ftpwindow.cpp  main.cpp
utils/kernels/: bot_9am_cloudy_kernel  bot_kernel  bot_night_10_kernel  bot_starbuck_kernel  top_9am_cloudy_kernel  top_kernel  top_night_10_kernel
utils/kernels/tuesday/: bot_9am.kernel  top_9am.kernel
utils/mapGenerator/: .gitignore  Makefile  Map.cpp  Map.h  MapFileHeader.cpp  MapFileHeader.h  MapFileIO.cpp  MapFileIO.h  MapGenerator.cpp  MapGenerator.h  main.cpp
utils/networking/: net  rm_connman.sh  wpa_supplicant.conf  wpa_supplicant_sync.sh
utils/networking/packetSnifferScripts/: RoboCupGameControlData_to_information.js  TeamData.js
utils/networking/wifitools/: runswiftwireless_template  updateWlanSetup.py
utils/nnmc_new_to_old/: new_to_old.c
utils/notes/: setupProcess
utils/offnao/: CMakeLists.txt  ConnectionBar.ui  README  fields.hpp  frame.hpp  frame.tcc  goffnao-wrapper.sh  main.cpp  mediaPanel.cpp  mediaPanel.hpp  naoData.hpp  naoData.tcc  offnao-wrapper.sh  progopts.hpp  runswift.cfg  visualiser.cpp  visualiser.hpp  visualiser.tcc  visualiser.ui
utils/offnao/externaldata/: ExternalData.hpp
utils/offnao/readers/: bbdReader.cpp  bbdReader.hpp  dumpReader.cpp  dumpReader.hpp  networkReader.cpp  networkReader.hpp  reader.cpp  reader.hpp  recordReader.cpp  recordReader.hpp
utils/offnao/resources/: visualiser_resources.qrc
utils/offnao/tabs/: LogTab.cpp  LogTab.hpp  LogTab.ui  LogsTab.cpp  LogsTab.hpp  LogsTab.ui  PointCloud.cpp  PointCloud.hpp  calibrationTab.cpp  calibrationTab.hpp  cameraPoseTab.cpp  cameraPoseTab.hpp  cameraTab.cpp  cameraTab.hpp  classifier.cpp  classifier.hpp  controlTab.cpp  controlTab.hpp  fieldView.cpp  fieldView.hpp  graphTab.cpp  graphTab.hpp  icpFieldView.cpp  icpFieldView.hpp  icpTab.cpp  icpTab.hpp  jointsTab.cpp  jointsTab.hpp  localisationTab.cpp  localisationTab.hpp  overviewTab.cpp  overviewTab.hpp  plots.cpp  plots.hpp  sensorTab.cpp  sensorTab.hpp  surfTab.cpp  surfTab.hpp  tab.cpp  tab.hpp  (+12 more)
utils/offnao/utils/: CPlaneColours.cpp  CPlaneColours.hpp  FieldObject.hpp  FieldPainter.cpp  FieldPainter.hpp  OverlayPainter.cpp  OverlayPainter.hpp
utils/qt_serialisation/: boostSerializationQPoint.hpp
utils/remoteshelllauncher/: remoteshelllauncher.py
(+14 files in other folders)
